GH-862 Include permissionId in ConnectionStatusMessage